--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,32 @@
 body {
   font-family: sans-serif;
+  color: #404040;
+}
+
+#header_container {
+  border-bottom: 0.2em solid #808080;
+  border-radius: 0.6em;
+  padding: 0.6em;
+  margin-top: -0.4em;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#title {
+  font-size: 2.5em;
+  font-weight: bold;
+}
+
+#size_options ul {
+  background: lightgray;
+  border-radius: 0.5em;
+
+  margin: 0;
+  padding: 0.8em;
+  display: inline-block;
 }
