--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ body {
   border-radius: 0.6em;
   padding: 0.6em;
   margin-top: -0.4em;
+  margin-bottom: 1em;
 }
 
 header {
@@ -29,4 +30,22 @@ header {
   margin: 0;
   padding: 0.8em;
   display: inline-block;
+}
+
+#game_area {
+  height: 30em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgray;
+}
+
+#game_board {
+  height: 25em;
+  width: 25em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
