panels show correct symbol when opened, win condition checked and some other minor tweaks

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,8 +83,8 @@ header {
 
 /* Opened panel */
 .game_panel.opened {
-  background-color: gray;
-  border-color: gray;
+  background-color: darkgray;
+  border-color: darkgray;
 }
 
 /* Text under button is invisible unless opened */
