--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ header {
 }
 
 #size_options ul {
-  background: lightgray;
+  background-color: lightgray;
   border-radius: 0.5em;
 
   margin: 0;
@@ -37,12 +37,30 @@ header {
   background: gray;
 }
 
+/* The information class means that the element's contents are
+informational. */
+.information {
+  text-align: center;
+  font-size: 1.2em;
+}
+
+#game_description {
+  margin: 1em;
+}
+
+#game_status {
+  margin: 1em;
+  font-weight: bold;
+  line-height: 1.5em;
+}
+
 #game_area {
   height: 30em;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: lightgray;
+  border-radius: 0.5em;
 }
 
 #game_board {
@@ -50,7 +68,7 @@ header {
   height: 24em;
   width: 24em;
 
-  border-radius: 0.2em;
+  border-radius: 0.5em;
   padding: 0.5em;
 
   /* Grid layout definition */
@@ -70,6 +88,7 @@ header {
   font-weight: bold;
   font-family: sans-serif;
   text-align: center;
+  cursor: pointer;
 
   /* This centers text*/
   display: grid;
@@ -81,10 +100,15 @@ header {
   border-color: gray;
 }
 
+.game_panel:active {
+  border-style: inset;
+}
+
 /* Opened panel */
 .game_panel.opened {
   background-color: darkgray;
   border-color: darkgray;
+  cursor: default;
 }
 
 /* Text under button is invisible unless opened */
